<resources>
    <string name="app_name">Cupcake</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="six_cupcake">Six CUPCAKE</string>
    <string name="twelve_cupcake">twelve CUPCAKE</string>
    <string name="one_cupcake">ONE CUPCAKE</string>
    <string name="order_cupcake">Order Cupcake</string>
    <string name="login_your_account">LOGIN YOUR <font color="#00FF00">ACCOUNT</font></string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_account_signup">Don\'t have account? <font color="#0000FF">SignUp!</font></string>
    <string name="resent">Resent</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="i_accept_all_terms_and_conditions">I accept all terms and conditions</string>
    <string name="date_of_birth">date_of_birth</string>
    <string name="submit">submit</string>
    <string name="textview">textview</string>
    <string name="title">Title</string>
    <string name="dec">Dec</string>
    <string-array name="list">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
    </string-array>
</resources>