<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">

      <TextView
          android:id="@+id/view"
          app:layout_constraintTop_toTopOf="parent"
          android:layout_marginTop="20dp"
          android:background="@color/purple_500"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_begin="20dp" />

         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_end="20dp" />
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:paddingStart="20dp"
             android:paddingTop="20dp"
             app:layout_constraintTop_toBottomOf="@+id/view"
             android:paddingEnd="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             >

             <!-- TODO: Update blank fragment layout -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/layout_textField_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 android:hint="@string/title"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="40dp"
                 >
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/textField_title"
                     android:layout_width="match_parent"
                     android:layout_height="43dp"
                     android:lines="1"
                     />

             </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/textInputLayoutStyleHintEnable"
                 android:id="@+id/layout_textField_dec"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/layout_textField_title"
                 android:hint="@string/dec"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="40dp"
                 >
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/textField_dec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="top"
                     android:minHeight="150dp"
                     />

             </com.google.android.material.textfield.TextInputLayout>
             <Button
                 android:id="@+id/btn_submitComplaint"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAllCaps="false"
                 android:gravity="center"
                 android:backgroundTint="@{!textFieldTitle.text.toString().isEmpty()&amp;&amp; !textFieldDec.text.toString().isEmpty()? @color/black : @color/purple_200}"
                 android:enabled="@{!textFieldTitle.text.toString().isEmpty()&amp;&amp; !textFieldDec.text.toString().isEmpty()}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="20dp"
                 android:text="@string/submit"/>


         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>

</layout>